--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.8.2",
+    "@stackframe/stack": "^2.8.12",
     "bcrypt": "^6.0.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
